# Janko-Skudar

./: .gitignore  build.sh  pyproject.toml  requirements.txt
static/css/: style.css
templates/: index.html
