[project]
name = "poetry install"
version = "0.1.0"
description = ""
authors = [
    {name = "miro",email = "sschmiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
flask = "^3.1.1"
gunicorn = "^23.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
